Build out submenu features

--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
+
     <title>App</title>
 </head>
 
 <body>
-    <aside class="Landing_Aside js-aside">
+    <!-- <aside class="Landing_Aside js-aside">
         <section class="Aside_Controlls js-controlls"></section>
         <section class="Aside_Contacts js-contacts"></section>
-    </aside>
-    <main class="Landing_Main">
-        <h1 class="Landing_title js-title">CSS Transitions</h1>
+    </aside> -->
+    <!-- <main class="Landing_Main"> -->
+        <!-- <h1 class="Landing_title js-title">CSS Transitions</h1> -->
         <div id="demo">
            
         </div>
-    </main>
+    <!-- </main> -->
     <script src="/output/bundle.js"></script>
 </body>
 
