Move index to top level

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="demo-section" id="contact" >contact</section>
 </div>
 
-    <script src="/output/bundle.js"></script>
+    <script src="./output/bundle.js"></script>
 </body>
 
 </html>
