--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" href="./src/styles/bundle.css">
+    
     <title>App</title>
 </head>
 
