Refacter functions shared across effects

--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <!-- <link rel="stylesheet" href="./src/styles/bundle.css"> -->
     <script src="./output/bundle.js"></script>
-    
-    <title>App</title>
+    <title>CSS Transitions</title>
 </head>
 
 <body class="multi-box-menu-effect">
-
 </body>
 
 </html>
