Add snippets for all menus in the big 3

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <link rel="stylesheet" href="./src/styles/bundle.css"> -->
+    <link rel="stylesheet" href="./src/css/app.css">
     <script src="./output/bundle.js"></script>
+    
 
 
 </head>
